@@ -157,6 +157,7 @@ static struct cb_label		*last_section = NULL;
 static unsigned char		*litbuff = NULL;
 static int			litsize = 0;
 
+static unsigned int		has_global_file = 0;
 static unsigned int		needs_exit_prog = 0;
 static unsigned int		needs_unifunc = 0;
 static unsigned int		need_save_exception = 0;
@@ -9139,7 +9140,9 @@ output_internal_function (struct cb_program *prog, cb_tree parameter_list)
 	output (";\n");
 
 	/* Error handlers */
-	if (prog->file_list || prog->flag_gen_error) {
+	if (prog->file_list 
+	 || prog->flag_gen_error
+	 || has_global_file) {
 		output_error_handler (prog);
 	}
 
@@ -10728,6 +10731,12 @@ codegen (struct cb_program *prog, const int nested)
 	/* Skip to next nested program */
 
 	if (prog->next_program) {
+		if (!nested) {
+		 	if (prog->flag_file_global)
+				has_global_file = 1;
+			else
+				has_global_file = 0;
+		}
 		codegen (prog->next_program, 1);
 		return;
 	}
