@@ -254,3 +254,41 @@ prog.cob: 21: Error: File FILE5: RELATIVE KEY FILE5-KEY must be integer
 
 AT_CLEANUP
 
+
+AT_SETUP([GLOBAL FD nested progam])
+AT_KEYWORDS([GLOBAL-FD])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       
+       ENVIRONMENT DIVISION.
+       INPUT-OUTPUT SECTION.
+       FILE-CONTROL.
+           SELECT f ASSIGN "foo.dat"
+               ORGANIZATION INDEXED
+               RECORD KEY f-key.
+       
+       DATA DIVISION.
+       FILE SECTION.
+       FD  f                                   GLOBAL.
+       01  f-rec                               GLOBAL.
+           03  f-key                           PIC 9.
+       
+       PROCEDURE DIVISION.
+           CALL "output-statement" .
+       
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. output-statement.
+       
+       PROCEDURE DIVISION.
+           WRITE f-rec .
+           END PROGRAM output-statement.
+       END PROGRAM prog .
+])
+
+AT_CHECK([cobc -x -std=cobol2002 -w prog.cob ], [0], [],
+[])
+
+AT_CLEANUP
+
