@@ -1,4 +1,8 @@
 
+2018-06-20  Ron Norman <rjn@inglenet.com>
+	* codgen.c: emit code for 'Default Error Handler' in nested
+	     subroutines when the main module has GLOBAL files
+
 2018-05-24  Ron Norman <rjn@inglenet.com>
 	* cobc.c: Remove change to set LANG env var
 
